# raspberry_home_system

./: .gitignore  CMakeLists.txt  README.md  build_debug.sh  build_release.sh  justforlater  version_config.h.in
application/: CMakeLists.txt
application/src/: HomeScreen.cpp  HomeScreen.h
libraries/: CMakeLists.txt
libraries/core/: CMakeLists.txt  sdlexample
libraries/core/include/: Core.h  EntryPoint.h  PluginHelper.h  PluginLoader.h  PluginManagement.h  RazCore.h
libraries/core/src/RazHome/: PluginLoader.cpp  PluginManagement.cpp  RazCore.cpp
libraries/yaml-parser/: CMakeLists.txt
libraries/yaml-parser/include/: RazYamlParser.h
libraries/yaml-parser/src/: RazYamlParser.cpp
modules/: CMakeLists.txt
modules/base_plugin/: CMakeLists.txt
modules/base_plugin/include/: PluginBase.h
modules/base_plugin/src/: PluginBase.cpp  PluginFactory.cpp
modules/plugin_light/: CMakeLists.txt
modules/plugin_light/include/: LightPlugin.h
modules/plugin_light/src/: LightPlugin.cpp
src/: main.cpp
tests/: CMakeLists.txt
tests/src/: PluginLoaderUnitTests.cpp  YamlParserUnitTests.cpp  config.yaml
